// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`listParameters gets parameters 1`] = `
"[90m┌───────────────────────────────────────────────[39m[90m┬─────────────[39m[90m┬────────────[39m[90m┬─────────────────────────────────────────────────┐[39m
[90m│[39m[31m Name                                          [39m[90m│[39m[31m Environment [39m[90m│[39m[31m Updated by [39m[90m│[39m[31m Updated at                                      [39m[90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m GRAPHQL_ENDPOINT                              [90m│[39m all         [90m│[39m serious    [90m│[39m Thursday, November 29th, 2018, 1:26:47 PM (PST) [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m PAGERDUTY_E2E_STEP_FUNCTION_INTEGRATION_TOKEN [90m│[39m all         [90m│[39m Rubeus     [90m│[39m Monday, April 13th, 2020, 3:49:25 PM (PDT)      [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m PAGERDUTY_E2E_TEST_FAILURES_INTEGRATION_TOKEN [90m│[39m all         [90m│[39m Rubeus     [90m│[39m Tuesday, April 21st, 2020, 2:32:08 PM (PDT)     [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m PHABRICATOR_CONDUIT_TOKEN                     [90m│[39m all         [90m│[39m serious    [90m│[39m Friday, November 23rd, 2018, 11:25:09 AM (PST)  [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m PRISMA_ENDPOINT                               [90m│[39m all         [90m│[39m serious    [90m│[39m Friday, November 23rd, 2018, 11:26:02 AM (PST)  [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m PRISMA_MANAGEMENT_API_SECRET                  [90m│[39m all         [90m│[39m serious    [90m│[39m Tuesday, January 22nd, 2019, 12:46:29 PM (PST)  [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m SENTRY_DSN                                    [90m│[39m all         [90m│[39m serious    [90m│[39m Friday, November 23rd, 2018, 11:27:19 AM (PST)  [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m SENTRY_ENVIRONMENT                            [90m│[39m all         [90m│[39m serious    [90m│[39m Sunday, November 25th, 2018, 1:11:45 PM (PST)   [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m DEPLOY_SERVICE_STEP_FUNCTION_NAME             [90m│[39m development [90m│[39m severus    [90m│[39m Thursday, July 11th, 2019, 5:21:37 PM (PDT)     [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m DEPLOY_SERVICE_STEP_FUNCTION_WRAPPER_NAME     [90m│[39m development [90m│[39m severus    [90m│[39m Thursday, October 3rd, 2019, 12:44:53 PM (PDT)  [90m│[39m
[90m└───────────────────────────────────────────────[39m[90m┴─────────────[39m[90m┴────────────[39m[90m┴─────────────────────────────────────────────────┘[39m"
`;

exports[`listParameters gets parameters, using nextToken 1`] = `
"[90m┌───────────────────────────────────────────────[39m[90m┬─────────────[39m[90m┬────────────[39m[90m┬─────────────────────────────────────────────────┐[39m
[90m│[39m[31m Name                                          [39m[90m│[39m[31m Environment [39m[90m│[39m[31m Updated by [39m[90m│[39m[31m Updated at                                      [39m[90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m GRAPHQL_ENDPOINT                              [90m│[39m all         [90m│[39m serious    [90m│[39m Thursday, November 29th, 2018, 1:26:47 PM (PST) [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m PAGERDUTY_E2E_STEP_FUNCTION_INTEGRATION_TOKEN [90m│[39m all         [90m│[39m Rubeus     [90m│[39m Monday, April 13th, 2020, 3:49:25 PM (PDT)      [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m PAGERDUTY_E2E_TEST_FAILURES_INTEGRATION_TOKEN [90m│[39m all         [90m│[39m Rubeus     [90m│[39m Tuesday, April 21st, 2020, 2:32:08 PM (PDT)     [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m PHABRICATOR_CONDUIT_TOKEN                     [90m│[39m all         [90m│[39m serious    [90m│[39m Friday, November 23rd, 2018, 11:25:09 AM (PST)  [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m PRISMA_MANAGEMENT_API_SECRET                  [90m│[39m all         [90m│[39m serious    [90m│[39m Tuesday, January 22nd, 2019, 12:46:29 PM (PST)  [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m SENTRY_DSN                                    [90m│[39m all         [90m│[39m serious    [90m│[39m Friday, November 23rd, 2018, 11:27:19 AM (PST)  [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m SENTRY_ENVIRONMENT                            [90m│[39m all         [90m│[39m serious    [90m│[39m Sunday, November 25th, 2018, 1:11:45 PM (PST)   [90m│[39m
[90m├───────────────────────────────────────────────[39m[90m┼─────────────[39m[90m┼────────────[39m[90m┼─────────────────────────────────────────────────┤[39m
[90m│[39m DEPLOY_SERVICE_STEP_FUNCTION_NAME             [90m│[39m development [90m│[39m severus    [90m│[39m Thursday, July 11th, 2019, 5:21:37 PM (PDT)     [90m│[39m
[90m└───────────────────────────────────────────────[39m[90m┴─────────────[39m[90m┴────────────[39m[90m┴─────────────────────────────────────────────────┘[39m"
`;

exports[`listParameters request fails 1`] = `""`;
